--- a/frontend/src/app/shared/partials/header/header.component.html
+++ b/frontend/src/app/shared/partials/header/header.component.html
@@ -30,14 +30,14 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <!-- account icon -->
-                    <i class="fa fa-user mr-2"></i> Hi, User
+                    <i class="fa fa-user mr-2"></i> Hi, {{ auth.getUsername() }}
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item">
                         <i class="fa fa-user"></i> Profile
                     </a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" [routerLink]="['/']">
+                    <a class="dropdown-item pointer" (click)="logout()">
                         <i class="fa fa-sign-out"></i> Logout
                     </a>
                 </div>
