--- a/frontend/src/app/components/transaction-history/transaction-history.component.html
+++ b/frontend/src/app/components/transaction-history/transaction-history.component.html
@@ -8,34 +8,24 @@
             <table class="table table-striped">
                 <thead>
                     <tr>
-                        <th>Transaction ID</th>
-                        <th>Crypto</th>
-                        <th>Amount</th>
-                        <th>Price</th>
-                        <th>Date</th>
+                        <th>transactionId</th>
+                        <th>transactionType</th>
+                        <th>amount</th>
+                        <th>accountNumber</th>
+                        <th>status</th>
+                        <th>createdAt</th>
+                        <th>modifiedAt</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>1</td>
-                        <td>Bitcoin</td>
-                        <td>0.5</td>
-                        <td>$ 10,000</td>
-                        <td>12-12-2018</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>Ethereum</td>
-                        <td>5</td>
-                        <td>$ 1,000</td>
-                        <td>12-12-2018</td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>Ripple</td>
-                        <td>100</td>
-                        <td>$ 0.5</td>
-                        <td>12-12-2018</td>
+                      <td>transactionId</td>
+                      <td>CREDIT</td>
+                      <td>$180000</td>
+                      <td>5678999</td>
+                      <td>SUCCESS</td>
+                      <td>2024-04-16</td>
+                      <td>2024-04-16</td>
                     </tr>
                 </tbody>
             </table>
