--- a/frontend/src/app/components/transaction-history/transaction-history.component.html
+++ b/frontend/src/app/components/transaction-history/transaction-history.component.html
@@ -2,33 +2,33 @@
 
 <!-- show my transaction history -->
 <div class="container mt-5">
-    <div class="row">
-        <div class="col-md-12">
-            <h5 class="text-center text-info">Transaction History</h5>
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>transactionId</th>
-                        <th>transactionType</th>
-                        <th>amount</th>
-                        <th>accountNumber</th>
-                        <th>status</th>
-                        <th>createdAt</th>
-                        <th>modifiedAt</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                      <td>transactionId</td>
-                      <td>CREDIT</td>
-                      <td>$180000</td>
-                      <td>5678999</td>
-                      <td>SUCCESS</td>
-                      <td>2024-04-16</td>
-                      <td>2024-04-16</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+  <div class="row">
+    <div class="col-md-12">
+      <h5 class="text-center text-info">Transaction History</h5>
+      <table class="table table-striped">
+        <thead>
+        <tr>
+          <th>transactionId</th>
+          <th>transactionType</th>
+          <th>amount</th>
+          <th>accountNumber</th>
+          <th>status</th>
+          <th>createdAt</th>
+          <th>modifiedAt</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor='let transaction of transactions'>
+          <td>{{transaction.transactionId}}</td>
+          <td>{{transaction.transactionType}}</td>
+          <td>{{transaction.amount}}</td>
+          <td>{{transaction.accountNumber}}</td>
+          <td>{{transaction.status}}</td>
+          <td>{{transaction.createdAt}}</td>
+          <td>{{transaction.modifiedAt}}</td>
+        </tr>
+        </tbody>
+      </table>
     </div>
+  </div>
 </div>
