--- a/frontend/src/app/components/transaction-history/transaction-history.component.html
+++ b/frontend/src/app/components/transaction-history/transaction-history.component.html
@@ -7,37 +7,28 @@
             <h5 class="text-center text-info">Transaction History</h5>
             <table class="table table-striped">
                 <thead>
-                    <tr>
-                        <th>Transaction ID</th>
-                        <th>Crypto</th>
-                        <th>Amount</th>
-                        <th>Price</th>
-                        <th>Date</th>
-                    </tr>
+                <tr>
+                  <th>transactionId</th>
+                  <th>transactionType</th>
+                  <th>amount</th>
+                  <th>accountNumber</th>
+                  <th>status</th>
+                  <th>createdAt</th>
+                  <th>modifiedAt</th>
+                </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>Bitcoin</td>
-                        <td>0.5</td>
-                        <td>$ 10,000</td>
-                        <td>12-12-2018</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>Ethereum</td>
-                        <td>5</td>
-                        <td>$ 1,000</td>
-                        <td>12-12-2018</td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>Ripple</td>
-                        <td>100</td>
-                        <td>$ 0.5</td>
-                        <td>12-12-2018</td>
-                    </tr>
-                </tbody>
+              <tbody>
+              <tr *ngFor='let transaction of transactions'>
+                <td>{{transaction.transactionId}}</td>
+                <td>{{transaction.transactionType}}</td>
+                <td>{{transaction.amount}}</td>
+                <td>{{transaction.accountNumber}}</td>
+                <td>{{transaction.status}}</td>
+                <td>{{transaction.createdAt}}</td>
+                <td>{{transaction.modifiedAt}}</td>
+              </tr>
+              </tbody>
             </table>
         </div>
     </div>
+</div>
